src/Native/SlangNative.h

    extern "C" SLANGNATIVE_API void* TypeParameterReflection_GetConstraintByIndex(void* typeParameterReflection, int index);
    // Attribute API
    extern "C" SLANGNATIVE_API void Attribute_Release(void* attributeReflection);
    extern "C" SLANGNATIVE_API void* Attribute_GetNative(void* attributeReflection);
    extern "C" SLANGNATIVE_API const char* Attribute_GetName(void* attributeReflection);
    extern "C" SLANGNATIVE_API unsigned int Attribute_GetArgumentCount(void* attributeReflection);
	extern "C" SLANGNATIVE_API void* Attribute_GetArgumentType(void* attributeReflection, unsigned int index);
    extern "C" SLANGNATIVE_API SlangResult Attribute_GetArgumentValueInt(void* attributeReflection, unsigned int index, int* value);
    extern "C" SLANGNATIVE_API SlangResult Attribute_GetArgumentValueFloat(void* attributeReflection, unsigned int index, float* value);
    extern "C" SLANGNATIVE_API const char* Attribute_GetArgumentValueString(void* attributeReflection, unsigned int index);
    
    
    // Modifier API
    extern "C" SLANGNATIVE_API void Modifier_Release(void* modifier);
    extern "C" SLANGNATIVE_API void* Modifier_GetNative(void* modifier);
    extern "C" SLANGNATIVE_API int Modifier_GetID(void* modifier);
    extern "C" SLANGNATIVE_API const char* Modifier_GetName(void* modifier);