src/Slang.Sdk/Layer1-Interop/SlangNativeInterop.cs


    [LibraryImport(LibraryName)]
    internal static partial nint TypeParameterReflection_GetConstraintByIndex(
        nint typeParameterReflection, 
        int index);

    #endregion

    #region Attribute API

    [LibraryImport(LibraryName)]
    internal static partial void Attribute_Release(nint attributeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint Attribute_GetNative(nint attributeReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* Attribute_GetName(nint attributeReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint Attribute_GetArgumentCount(nint attributeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint Attribute_GetArgumentType(
        nint attributeReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial int Attribute_GetArgumentValueInt(
        nint attributeReflection, 
        uint index, 
        int* value);

    [LibraryImport(LibraryName)]
    internal static partial int Attribute_GetArgumentValueFloat(
        nint attributeReflection, 
        uint index, 
        float* value);

    [LibraryImport(LibraryName)]
    internal static partial byte* Attribute_GetArgumentValueString(
        nint attributeReflection, 
        uint index);

    #endregion

    #region Modifier API

    [LibraryImport(LibraryName)]
    internal static partial void Modifier_Release(nint modifier);

    [LibraryImport(LibraryName)]
    internal static partial nint Modifier_GetNative(nint modifier);

    [LibraryImport(LibraryName)]
    internal static partial int Modifier_GetID(nint modifier);

    [LibraryImport(LibraryName)]
    internal static partial byte* Modifier_GetName(nint modifier);

    #endregion
}

internal static unsafe partial class StrongTypeInterop
{

}